--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "antd": "^5.6.4",
+    "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.3.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
