--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.37",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
