--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-chartjs-2": "^5.2.0",
