--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "styled-components": "^6.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
