--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "sass": "^1.63.6",
-    "styled-components": "^6.0.4"
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
